# lanelet2-divider

./: CMakeLists.txt  package.xml
include/lanelet2_divider/: lanelet2_divider.hpp
src/: lanelet2_divider.cpp  mgrs_projector.cpp
